# generalag

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
agent/: engine.py  executor.py  graph.py  llm.py  planner.py  router.py  state.py  verifier.py  writer.py
api/: routes.py
data/golden_samples/: finance.json
demo/: README.md  financial_demo.py
docs/superpowers/specs/: 2026-06-16-general-agent-design.md
evaluation/: golden_sample.py  report.py  scorer.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: agent.ts
frontend/src/components/: AgentSteps.vue  AgentStudio.vue  AppLayout.vue  ChatMessage.vue  CommandBar.vue  CommandInput.vue  ExecutionPanel.vue  FlowCanvas.vue  InputBox.vue  NodeCard.vue  PipelineFlow.vue  PipelineView.vue  ResultCard.vue  ResultPanel.vue
frontend/src/types/: index.ts
frontend/src/views/: ChatView.vue
knowledge/: chunker.py  ingest.py  retriever.py
memory/: longterm.py  manager.py  summary.py  working.py
tests/: conftest.py  test_chunker.py  test_engine.py  test_executor.py  test_golden_sample.py  test_router.py  test_tools.py  test_verifier.py
tools/: base.py  calc_tool.py  financial_tool.py  rag_tool.py  registry.py  search_tool.py  summary_tool.py
