[project]
name = "general-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "milvus-lite>=3.0",
    "pydantic-settings>=2.14.1",
    "sympy>=1.14.0",
    "uvicorn>=0.49.0",
]
